# pyFishSenseDev

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile
experiments/: bgmm_laser_trainer.ipynb  checkerboard.ipynb  checkerboard.py  color_correction.ipynb  gmm_laser_detector.ipynb  possible_accidental_laser_detector.ipynb  raw_process.ipynb  sam_segmentation.ipynb  slate_detector.ipynb
pyfishsensedev/calibration/: __init__.py  laser_calibration.py  lens_calibration.py
pyfishsensedev/depth_map/: __init__.py  depth_anything_depth_map.py  depth_anything_metric.py  depth_map.py  laser_depth_map.py
pyfishsensedev/fish/: fish_segmentation_fishial.py  fish_segmentation_fishial_onnx.py  fish_segmentation_fishial_pytorch.py
pyfishsensedev/image/: __init__.py  color_correction.py  image_rectifier.py  pdf.py
pyfishsensedev/image/image_processors/: __init__.py  image_processor.py  raw_processor.py  raw_processor_old.py
pyfishsensedev/laser/: __init__.py  bayesian_laser_detector.py  gmm_laser_detector.py  laser_detector.py  nn_laser_detector.py
pyfishsensedev/plane_detector/: checkerboard_detector.py  plane_detector.py  projectable_plane_detector.py  slate_detector.py
pyfishsensedev/points_of_interest/: points_of_interest_detector.py
pyfishsensedev/points_of_interest/fish/: __init__.py  fish_geometry.py  fish_label_studio_points_of_interest_detector.py  fish_points_of_interest_detector.py  label_studio_points_of_interest_detector.py
pyfishsensedev/points_of_interest/general/: __init__.py  pca_points_of_interest_detector.py
pyfishsensedev/segmentation/: __init__.py  segmentation.py
pyfishsensedev/segmentation/fish/: __init__.py  fish_segmentation_fishial.py  fish_segmentation_fishial_onnx.py  fish_segmentation_fishial_pytorch.py
