[tool.poetry]
name = "pyfishsensedev"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
opencv-python = "^4.10.0.84"
torch = { version = "^2.4.0", source="torch"}
torchvision = { version = "^0.19.0", source="torch"}
scikit-image = "^0.24.0"
rawpy = "^0.22.0"
appdirs = "^1.4.4"
onnxruntime-gpu = "^1.19.2"
kornia = "^0.7.3"
shapely = "^2.0.6"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
onnx = "^1.16.2"
onnxoptimizer = "^0.3.13"
pytest = "^8.3.2"
nas-unzip = {git = "https://github.com/UCSD-E4E/synology-download.git"}
tqdm = "^4.66.5"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = [
    "tests",
]
