[tool.poetry]
name = "pyfishsensedev"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
rawpy = "^0.22.0"
appdirs = "^1.4.4"
onnxruntime-gpu = "^1.19.2"
kornia = "^0.7.3"
shapely = "^2.0.6"
pymupdf = "^1.24.10"
scikit-learn = "^1.5.2"
transformers = "^4.46.2"
pillow = "^11.0.0"
pywavelets = "^1.7.0"
numba = "^0.60.0"
sam-2 = {git = "https://github.com/facebookresearch/sam2.git"}
torch = "^2.5.1"
torchvision = "^0.20.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
onnx = "^1.16.2"
onnxoptimizer = "^0.3.13"
pytest = "^8.3.2"
nas-unzip = {git = "https://github.com/UCSD-E4E/synology-download.git"}
tqdm = "^4.66.5"
ipykernel = "^6.26.0"
black = "^24.3.0"
pylint = "^3.2.0"
ipywidgets = "^8.1.5"

[tool.poetry-dynamic-versioning]
enable = true
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = [
    "tests",
]
