[project]
name = "pyfishsensedev"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher L. Crutchfield",email = "ccrutchf@ucsd.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-image (>=0.25.1,<0.26.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "onnxruntime-gpu (>=1.20.1,<2.0.0); platform_machine == 'x86_64'",
    "onnxruntime (>=1.20.1,<2.0.0); platform_machine != 'x86_64'",
    "kornia (>=0.8.0,<0.9.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "transformers (>=4.48.3,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "pyaqua3ddev @ git+https://github.com/UCSD-E4E/pyAqua3dDev.git",
]

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.0"
onnx = "^1.17.0"
onnxoptimizer = "^0.3.13"
pytest = "^8.3.4"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
black = "^25.1.0"
pylint = "^3.3.4"
ipywidgets = "^8.1.5"
nas-unzip = {git = "https://github.com/UCSD-E4E/synology-download.git"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

